# docs/swagger.json
@@ -436,27 +436,16 @@
                         "description": " ",
                         "name": "seats[]",
                         "in": "formData"
+                    },
+                    {
+                        "type": "array",
+                        "description": "Daftar kursi yang dipilih",
+                        "name": "seats[]",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/controllers.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "results": {
-                                            "$ref": "#/definitions/models.TransactionResponse"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
@@ -970,23 +959,6 @@
                     "type": "string"
                 },
                 "updatedAt": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.TransactionResponse": {
-            "type": "object",
-            "properties": {
-                "expiryDate": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "string"
-                },
-                "totalPrice": {
-                    "type": "integer"
-                },
-                "virtualId": {
                     "type": "string"
                 }
             }
